removed menu-nav-cont to fix mobile nav overflow error

--- a/src/scss/primeaxis/header.scss
+++ b/src/scss/primeaxis/header.scss
@@ -16,20 +16,20 @@ body,*{
       margin-bottom: 8px;
   }
 }
-.main-nav-cont{
-  background-color: orange;
-  width: 100%;
-  height: 100%;
-  background-color:#3d5afe;
+
 
   .main-nav{
     position:fixed;
-    top:80px;
-
+    top:0;
+    background-color:#3d5afe;
     list-style-type: none;
+    width:100%;
+    height:100%;
     padding:0;
-    padding: 0 2em;
+    padding: 0 3em;
+    padding-bottom:5em;
     margin:0;
+    overflow-y: scroll;
     .main-nav-li{
       margin-bottom:1em;
     }
@@ -43,4 +43,17 @@ body,*{
     }
 
   }
+
+
+//=============Main-nav Close ============================//
+.main-nav-close::after{
+  display:fixed;
+    display: inline-block;
+   content: "\00d7";
+   font-weight:300;
+   color:#fff;
+   position:fixed;
+   right:30px;
+   font-size:3em;
+
 }
